--- a/7q1.html
+++ b/7q1.html
@@ -15,6 +15,6 @@
     <p id:1>Grammar Wise : Page.114 쪽까지 풀어오기</p>
     <p id:1>절대어휘 5100 1 : Day.19-20 풀어오기</p>
     <p id:1>Insight Link 6 : Unit.1 문제 풀기</p>
-    <p id:1>Print : 빈칸 채우기 (들린것만)</p>
+    <p id:1>Print : 빈칸 채우기 (틀린것만)</p>
   </body>
 </html>>
